# dflash

./: README.md  pyproject.toml
dflash/: __init__.py  benchmark.py  model.py  model_mlx.py
model/: dflash.py
scripts/: check_mlx_setup.py  check_qwen3_coder_next_dflash_only.py  test_mlx_qwen3_coder.py  test_qwen3_coder_next_mlx.py
